# SmoothMyStrategy

./: .gitignore  .gitlab-ci.yml  .pre-commit-config.yaml  CHANGELOG  CONTRIBUTING.md  Dockerfile  README.md  features.py  pyproject.toml  pytest.ini  setup.py
.cursor/: mcp.json
.cursor/rules/: context7.mdc  sequential_thinking.mdc
.cursor/rules/taskmaster/: taskmaster.mdc
.devcontainer/: devcontainer.json  postCreateCommand.sh  postStartCommand.sh
.github/workflows/: lint.yml  test.yml
.taskmaster/: config.json  state.json
.taskmaster/templates/: example_prd.txt
resources/: wandb_sweep_template.yaml
scripts/: streamlit_fund_analysis.py
src/: agents.py  analysis.py  config.py  constants.py  entrypoints.py  env.py  environment.py  evaluate.py  logger.py  losses.py  optimizers.py  run_training.py  train.py  utils.py  visualize.py
src/analysis/: correlation.py
src/cfg/: buy_everyday.yaml  eval_buy_everyday.yaml  eval_max_sharpe_ratio.yaml  eval_minimum_variance_portfolio.yaml  eval_random_distribution.yaml  eval_single_ticker.yaml  train_single_ticker.yaml
src/cfg/technical_indicators/: one_year_return.yaml
src/ci/: check_requirements.py
src/common/: config.py
src/config/: CI.yaml  SAC.yaml  base.py  data.py  debug.yaml  double_ticker.yaml  environment.py  evaluation.py  quant.py  rl.py  run.py  schemas.py  single_ticker.yaml
src/config/eval_environment/: same_time_train.yaml
src/config/preprocessing/: all.yaml
src/data/: __init__.py  config.py  constants.py  container.py  download.py  features.py  generate_fake.py  loader.py  preprocessing.py
src/data/cfg/: OMXS30.json  funds.json  indices.json
src/data/config/: CAC40.json  DOW_30.json  NAS_100.json  OMXS30.json  SP_500.json  currencies.json  indices.json  test_data.json
src/data/test/: test_download.py  test_features.py  test_loader.py  test_preprocessing.py
src/environment/: base.py  signal_action.py  trading.py  utils.py  weight_action.py
src/environment/test/: test_environments.py  test_signal_action.py  test_weight_action.py  utils.py
src/environments/: config.py  discrete_trading.py  trading.py
src/environments/test/: test_environments.py
src/evaluation/: README.md  analysis.py  config.py  evaluate.py  metrics.py  run_evaluation.py  run_testing.py
src/evaluation/test/: test_metrics.py
src/models/: agents.py  models.py
src/notebooks/: Benchmark QRT.ipynb  Learning.ipynb
src/preprocessing/: indicators.py  moving_average.py  volatility.py
src/quant/: README.md  base.py  buy_every_monday.py  buy_everyday.py  buy_random_distribution.py  config.py  max_sharpe_ratio.py  minimum_variance_portfolio.py  run_calibration.py
src/quant/test/: test_buy_random_distribution.py
src/rl/: agents.py  config.py  losses.py  optimizers.py  run_training.py  train.py  utils.py
src/test/: test_run_experiment.py  test_run_training.py
src/test/cfg/: calibration.yaml  evaluation.yaml  quant_eval.yaml  rl_eval.yaml  rl_pipeline.yaml  rl_train.yaml  training.yaml
src/test/config/: quant_pipeline.yaml  unittest_training.yaml
src/testing/: run_testing.py  visualize.py
src/tools/: install_mujoco.sh  run_style.py
src/training/: evaluate.py  logger.py  losses.py  optimizers.py  run_training.py  train.py  utils.py
src/visualization/: visualize.py
tools/: format.sh  run_experiments.sh  run_sweep.sh
tools/ci/: before_script.sh  run_pytest.sh  run_requirements_check.sh  run_style.sh
tools/install_utils/: download_torchrl_implementations.sh  install_mujoco.sh
