[tool.isort]
profile = "black"
known_third_party = ["wandb"]
line_length = 88

[tool.ruff]
line-length = 88

[project]
name = "Finance"
version = "0.0.0"
description = "Private package to have fun around finance."
authors = [{ name = "Yann POURCENOUX", email = "yann.pourcenoux@gmail.com" }]
readme = "README.md"
license = { file = "LICENSE" }
urls = { Homepage = "https://gitlab.com/yannpourcenoux/Finance" }
dependencies = [
    "altair~=5.4.1",
    "GitPython~=3.1.43",
    "hydra-core~=1.3.2",
    "jupyter~=1.0.0",
    "loguru~=0.7.2",
    "pandas~=2.2.2",
    "plotly~=5.24.0",
    "pydantic~=2.9.1",
    "python-dotenv~=1.0.1",
    "quantstats-lumi~=0.3.3",
    "seaborn~=0.13.2",
    "statsmodels~=0.14.2",
    "stockstats~=0.6.2",
    "streamlit~=1.38.0",
    "tqdm~=4.66.5",
    "wandb~=0.17.9",
    "yfinance~=0.2.43",
]

[project.optional-dependencies]
dev = [
    "docformatter~=1.7.5",
    "icecream~=2.1.3",
    "isort~=5.13.2",
    "pre-commit~=3.8.0",
    "prettier~=0.0.7",
    "pytest~=8.3.2",
    "pytest-cov~=5.0.0",
    "ruff~=0.5.5",
]
mac = ["numpy", "tensordict", "torch", "torchrl"]
ubuntu = ["numpy~=2.1.1", "tensordict~=0.5.0", "torch==2.4.1", "torchrl~=0.5.0"]

[project.scripts]
run_training = "entrypoints:run_training"
run_testing = "entrypoints:run_testing"
