[tool.isort]
profile = "black"
known_third_party = ["wandb"]
line_length = 88

[tool.ruff]
line-length = 88

[tool.docformatter]
black = true

[project]
name = "Finance"
version = "0.0.0"
description = "Private package to have fun around finance."
authors = [{ name = "Yann POURCENOUX", email = "yann.pourcenoux@gmail.com" }]
readme = "README.md"
license = { file = "LICENSE" }
urls = { Homepage = "https://gitlab.com/yannpourcenoux/Finance" }
dependencies = [
    "altair==5.4.1",
    "docformatter==1.7.5",
    "GitPython==3.1.44",
    "hydra-core==1.3.2",
    "icecream==2.1.4",
    "isort==5.13.2",
    "loguru==0.7.3",
    "pandas==2.2.3",
    "plotly==5.24.1",
    "polars==1.12.0",
    "pre-commit==3.8.0",
    "prettier==0.0.7",
    "pydantic==2.9.2",
    "pytest==8.3.5",
    "pytest-xdist==3.6.1",
    "python-dotenv==1.0.1",
    "pyupgrade==3.19.1",
    "quantstats-lumi==0.3.3",
    "ruff==0.5.7",
    "seaborn==0.13.2",
    "statsmodels==0.14.4",
    "streamlit==1.38.0",
    "tqdm==4.66.6",
    "wandb==0.18.7",
    "yfinance==0.2.55",
    "numpy==2.2.4",
    "tensordict==0.7.2",
    "torch==2.6.0",
    "torchrl==0.7.2",
]

[project.scripts]
run_training = "entrypoints:run_training"
run_testing = "entrypoints:run_testing"
format_code = "entrypoints:format_code"
